# SecuritySystem

./: .gitignore  readme.md
backend/: .gitignore
backend/app/entrypoints/: server.py
camera/: .gitignore  pyproject.toml
camera/app/adapters/: camera_adapter.py  rabbitmq_adapter.py
camera/app/adaptors/: camera_adaptor.py
camera/app/entrypoints/: server.py
